# TechPorn

./: .gitmodules  LICENSE  README.md
src/deferred_rendering/: CMakeLists.txt  Mesh.h  main.cpp  ps_g_pass.hlsl  ps_l_pass.hlsl  ps_plain_color.hlsl  vs_g_pass.hlsl  vs_l_pass.hlsl  vs_plain_color.hlsl
src/deferred_rendering/meshes/: cube.mesh  plane.mesh
src/deferred_rendering/shaders/: g_pass.fs  g_pass.vs  l_pass.fs  l_pass.vs
src/marching_cubes/: CMakeLists.txt  Isosurface.h  Program.h  Shader.h  grid_shader.fs  grid_shader.vs  iso_shader.fs  iso_shader.vs  main.cpp  torus.mesh
